5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4163/executions/1638_2449.log
== TEST (2019-04-15 14:19:50) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-e*b)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d),(a*e-b*d)>0:
	msg = x
	msg = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
	
-- ERROR:
File "XXXX", line 11
    if (a*e-b*d),(a*e-b*d)>0:
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:20:34) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-e*b)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d>0):
	msg = x
	msg = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-e*b)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:22:16) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-e*b)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-e*b)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:23:32) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-e*b)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(round(msg, 1))
print(round(msg1, 1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-e*b)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:23:47) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-e*b)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(round(msg, 1))
print(round(msg1, 1))
	
-- EXECUTION TIME:
0.135478
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-e*b)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:24:51) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(round(msg, 1))
print(round(msg1, 1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:25:29) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(round(msg, 1))
print(round(msg1, 1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:25:30) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(round(msg, 1))
print(round(msg1, 1))
	
-- EXECUTION TIME:
0.162509
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:25:30) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(round(msg, 1))
print(round(msg1, 1))
	
-- EXECUTION TIME:
0.17485
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:13) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:26:22) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- EXECUTION TIME:
0.134803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:26:50) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:07) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg = y
else:
	msg = ("Nao tem solucao")
	
print(msg)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:27:43) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:28:05) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:28:19) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- EXECUTION TIME:
0.193765
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:11) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:15) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:29:47) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:30:07) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 14:30:55) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

if (a*e-b*d,a*e-b*d!=0):
	msg = x
	msg1 = y
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- EXECUTION TIME:
0.142542
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:11:41) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
msg1 = y

if (a*e-b*d,a*e-b*d!=0):
	msg = x
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 18:12:06) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)
msg1 = y

if (a*e-b*d,a*e-b*d!=0):
	msg = x
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(msg1)
	
-- EXECUTION TIME:
0.130186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:12:52) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

total = y

if (a*e-b*d,a*e-b*d!=0):
	msg = x
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 18:13:19) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

total = y

if (a*e-b*d,a*e-b*d!=0):
	msg = x
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(total)
	
-- EXECUTION TIME:
0.177338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:13:35) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

total = y

if (a*e-b*d,a*e-b*d!=0):
	msg = x
else:
	msg = ("Nao tem solucao")
	
print(msg)
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 18:13:46) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)

total = y

if (a*e-b*d,a*e-b*d!=0):
	msg = x
else:
	msg = ("Nao tem solucao")

	
print(msg)
print(total)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:18:22) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)


if (a*e-b*d and a*e-b*d!=0):
	print(x)
	print(y)
else:
	 print("Nao tem solucao")
	

	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 08:18:43) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)


if (a*e-b*d and a*e-b*d!=0):
	print(x)
	print(y)
else:
	 print("Nao tem solucao")
	

	

	
-- EXECUTION TIME:
0.159822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:19:34) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)


if (a*e-b*d) and (a*e-b*d)!=0:
	print(x)
	print(y)
else:
	 print("Nao tem solucao")
	

	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 08:19:51) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)


if (a*e-b*d) and (a*e-b*d)!=0:
	print(x)
	print(y)
else:
	 print("Nao tem solucao")
	

	

	
-- EXECUTION TIME:
0.142494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1638/2449/main.py", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:20:04) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))

x = (c*e-b*f)/(a*e-b*d)
y = (a*f-c*d)/(a*e-b*d)


if (a*e-b*d) and (a*e-b*d)!=0:
	print(x)
	print(y)
else:
	 print("Nao tem solucao")
	

	

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = (c*e-b*f)/(a*e-b*d)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 08:22:26) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))


if (a*e-b*d) and (a*e-b*d)!=0:
	print((c*e-b*f)/(a*e-b*d))
	print((a*f-c*d)/(a*e-b*d))
else:
	 print("Nao tem solucao")
	

	

	
-- OUTPUT:
Nao tem solucao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 08:22:36) 
-- CODE:
a = float(input("valor: "))
b = float(input("valor: "))
c = float(input("valor: "))
d = float(input("valor: "))
e = float(input("valor: "))
f = float(input("valor: "))


if (a*e-b*d) and (a*e-b*d)!=0:
	print((c*e-b*f)/(a*e-b*d))
	print((a*f-c*d)/(a*e-b*d))
else:
	 print("Nao tem solucao")
	

	

	
-- EXECUTION TIME:
0.131639
-- TEST CASE 1:
---- input:
10.0
10.0
12.0
10.0
10.0
12.0
---- correct output:
Nao tem solucao
---- user output:
Nao tem solucao
-- TEST CASE 2:
---- input:
1.0
8.0
12.0
16.0
22.0
30.0
---- correct output:
-0.22641509433962265
1.528301886792453
---- user output:
-0.22641509433962265
1.528301886792453
-- TEST CASE 3:
---- input:
24.0
48.0
52.0
112.0
16.0
1.0
---- correct output:
-0.15705128205128205
1.1618589743589745
---- user output:
-0.15705128205128205
1.1618589743589745
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
